--- a/devapp/pubspec.yaml
+++ b/devapp/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   camera: ^0.10.5+9
   flutter_animate: ^4.4.1
+  tflite_flutter: ^0.10.4
+  flutter_tflite: ^1.0.1
+  flutter_tts: ^3.8.5
+  permission_handler: ^11.2.0
+  get: ^4.6.6
+
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +65,8 @@ flutter:
     - assets/bluecat.png
     - assets/logo.png
     - assets/spin.gif
+    - assets/model.tflite
+    - assets/labels.txt
   
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
